# mcp-shield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml
docs/: API.md  CONFIGURATION.md  EXAMPLES.md  SPEC.md  TUTORIAL.md
examples/filesystem/: config.yaml
examples/lockdown/: config.yaml
mcp_shield/: __init__.py  audit.py  baseline.py  egress_monitor.py  main.py  policy.py  proxy.py  supply_chain.py  threat_db.py  updater.py
mcp_shield/gates/: __init__.py  discovery.py  invocation.py  response.py
tests/: test_shield.py
